--- a/templates/suricata-default.erb
+++ b/templates/suricata-default.erb
@@ -13,7 +13,7 @@ SURCONF=/etc/suricata/suricata.yaml
 LISTENMODE=pcap
 
 # Interface to listen on (for pcap mode)
-IFACE=eth1
+IFACE=<%= @monitor_interface %>
 
 # Queue number to listen on (for nfqueue mode)
 NFQUEUE=0
